alignment fix

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -526,10 +526,7 @@ input[type="number"] {
     }
   }
   .tabExtraFix{
-    .ant-tabs > .ant-tabs-nav{
-      position: relative;
-      flex: none;
-      align-items: center;
+    .ant-tabs > .ant-tabs-nav, .ant-tabs > div > .ant-tabs-nav{
       display: block;
     }
   }
